// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notFound on first load: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`notFound on first load: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/non-existent",
    "search": "",
    "state": Object {},
    "url": "/non-existent",
  },
]
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - history_index 1`] = `0`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "@@rudy/NOT_FOUND",
    "url": "/non-existent",
  },
  "title": "@@redux/INIT",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - response 1`] = `
Object {
  "hash": "",
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/non-existent",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "@@rudy/NOT_FOUND",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "@@rudy/NOT_FOUND",
    "url": "/non-existent",
  },
  "title": "@@rudy/NOT_FOUND",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - title 1`] = `"@@rudy/NOT_FOUND"`;
